src/sass/layout/_home_page.scss
.body__section {
  text-align: -webkit-center;
}

.hp__gallery_wrapper {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-auto-rows: auto;
  gap: 30px;
  max-width: 320px;

  margin-top: 20px;
  margin-right: 20px;
  margin-bottom: 40px;
  margin-left: 20px;

  @media screen and (min-width: 768px) and (max-width: 1023px) {
    grid-template-columns: repeat(2, 1fr);
    margin-top: 60px;
    margin-right: 75px;
    margin-bottom: 50px;
    margin-left: 75px;
    max-width: 768px;
  }
  @media screen and (min-width: 1024px) {
    grid-template-columns: repeat(3, 1fr);
    margin-top: 60px;
    margin-right: 71px;
    margin-left: 71px;
    margin-bottom: 50px;
    max-width: 1024px;
  }
  @media screen and (min-width: 1440px) {
    grid-template-columns: repeat(4, 1fr);
    margin-top: 60px;
    margin-right: 71px;
    margin-left: 71px;
    margin-bottom: 50px;
    max-width: 1440px;
  }
}

.hp__gallery_img-wrapper {
  margin-bottom: 10px;
}

.hp__gallery_img {
  border-radius: 5px;
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
    filter 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);

  &:hover {
    transform: scale(1.03);
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  }
}

